# check-sums

./: Cargo.toml
src/: args.rs  main.rs
