[package]
name = "check-sum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pgp = "0.7.2"
pico-args = { version = "0.4.2", features = ["combined-flags", "short-space-opt"] }
sha1 = "0.10.1"
sha2 = "0.10.2"
